# picosensor

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  flake.nix
src/: FreeRTOSConfig.h  lwipopts.h  main.c  mbedtls_config.h  sht30.c  sht30.h  time.c
